--- a/inlanddiscount.html
+++ b/inlanddiscount.html
@@ -30,6 +30,7 @@
               <!-- temp_cufind_content -->
             </ul>
         </div>
+        <div class="loading">正在加载.....</div>
         <!-- 底部 -->
         <div class="footer">
             <div class="footer-top">
